# smart_exporter

./: .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.dist.yaml  renovate.json  smart_exporter.sudoers
.github/workflows/: ci.yml
src/: collector.rs  main.rs  server.rs  smartctl.rs
tests/simple/: __all__dev_sda.stdout  __all__dev_sdb.stdout  __all__dev_sdc.stdout  __all__dev_sdd.stdout  __all__dev_sde.stdout  __scan_open.stdout
