[package]
name = "smart_exporter"
version = "0.1.0"
edition = "2021"
authors = ["Simon Brüggen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dropshot = "0.9.0"
http = "0.2.9"
hyper = "0.14.27"
prometheus-client = "0.21.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.7.0"
slog-async = "2.7.0"
slog-bunyan = "2.4.0"
slog-term = "2.9.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
